// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VideoListItem Component renders properly 1`] = `
<Link
  className="video-list-item card-type col-xl-3 col-lg-4 col-md-6 col-sm-6"
  replace={false}
  to="/watch/mh45igK4Esw"
>
  <div
    className="card"
  >
    <div
      className="card-thumbnail"
    >
      <div
        className="media-img-wrapper"
      >
        <img
          alt="Elon Musk: How I Became The Real 'Iron Man'"
          className="card-img-top"
          src="https://i.ytimg.com/vi/mh45igK4Esw/hqdefault.jpg"
        />
        <div
          className="duration"
        >
          3:55
        </div>
      </div>
    </div>
    <div
      className="card-body"
    >
      <h5
        className="card-title"
      >
        Elon Musk: How I Became The Real 'Iron Man'
      </h5>
      <p
        className="card-info"
      >
        Bloomberg
      </p>
      <p
        className="card-info"
      >
        <VideoViews
          format="summary"
          viewCount="4277277"
        />
         • 
        <t
          ago={false}
          calendar={false}
          decimal={false}
          element="time"
          filter={[Function]}
          fromNow={true}
          interval={60000}
          onChange={[Function]}
          toNow={false}
          unit={null}
          unix={false}
          utc={false}
        >
          2014-06-10T18:34:28.000Z
        </t>
      </p>
    </div>
  </div>
</Link>
`;

exports[`VideoListItem Component renders properly if type props is media 1`] = `
<Link
  className="video-list-item media-type"
  replace={false}
  to="/watch/mh45igK4Esw"
>
  <div
    className="media"
  >
    <div
      className="card-thumbnail col-6"
    >
      <div
        className="media-img-wrapper"
      >
        <img
          alt="Elon Musk: How I Became The Real 'Iron Man'"
          className="media-img"
          src="https://i.ytimg.com/vi/mh45igK4Esw/hqdefault.jpg"
        />
        <div
          className="duration"
        >
          3:55
        </div>
      </div>
    </div>
    <div
      className="media-body"
    >
      <h6
        className="media-title mt-1"
      >
        Elon Musk: How I Became The Real 'Iron Man'
      </h6>
      <p
        className="card-info mb-2"
      >
        Bloomberg
      </p>
      <p
        className="card-info"
      >
        <VideoViews
          format="summary"
          viewCount="4277277"
        />
         • 
        <t
          ago={false}
          calendar={false}
          decimal={false}
          element="time"
          filter={[Function]}
          fromNow={true}
          interval={60000}
          onChange={[Function]}
          toNow={false}
          unit={null}
          unix={false}
          utc={false}
        >
          2014-06-10T18:34:28.000Z
        </t>
      </p>
    </div>
  </div>
</Link>
`;

exports[`VideoListItem Component renders properly if video prop is also empty 1`] = `""`;
